--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,11 @@ S3method(RunsTest,factor)
 S3method(RunsTest,numeric)
 S3method(print,ChowTest)
 S3method(print,LargeSample)
+S3method(print,ResetTest)
 S3method(print,SmallSample)
 export(ChowTest)
 export(LargeSampleRunsInference)
+export(ResetTest)
 export(RunsTest)
 export(SmallSampleRunsInference)
 export(combination)
