--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,5 @@ export(ResetTest)
 export(RunsTest)
 export(SmallSampleRunsInference)
 export(combination)
+importFrom(stats,lm)
+importFrom(stats,pf)
